- change description in README.txt - remove unused startup parameters which are set in application